[package]
authors = ["kennycallado <kennycallado@hotmail.com>"]
description = "Simple way to scale your application with jobs"
edition = "2021"
license = "MIT"
name = "escalon-jobs"
readme = "README.md"
repository = "https://github.com/kennycallado/escalon-jobs"
version = "0.1.0"

[lib]
name = "escalon_jobs"
path = "src/lib.rs"

[[example]]
name = "base"
path = "examples/base.rs"

[dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.29", features = ["serde"] }
escalon = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
tokio-cron-scheduler = "*"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
