[package]
authors = ["kennycallado <kennycallado@hotmail.com>"]
description = "Simple way to scale your jobs application "
edition = "2021"
license = "MIT"
name = "escalon-jobs"
readme = "README.md"
repository = "https://github.com/kennycallado/escalon-jobs"
version = "0.1.6"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lib]
name = "escalon_jobs"
path = "src/lib.rs"

[[example]]
name = "base"
path = "examples/base.rs"

[dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.29" }
escalon = "0.1.12"
# escalon = { path = "../escalon" }
# escalon = { git = "https://github.com/kennycallado/escalon" }
tokio-cron-scheduler = "0.9.4"
uuid = { version = "1.4.1" }

[dev-dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
